--- a/.config/termite/config
+++ b/.config/termite/config
@@ -9,14 +9,16 @@ allow_bold = false
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = limey 7
+#font = limey 7
+font = lemon 7
+#font = Inconsolatazi4 8
 scrollback_lines = 1000
 search_wrap = true
 #icon_name = terminal
 #geometry = 640x480
 
 # 0.0: opaque, 1.0: transparent
-#transparency = 0.3
+transparency = 0.1
 pseudo_transparency = true
 
 # "system", "on" or "off"
@@ -25,43 +27,30 @@ cursor_blink = on
 # "block", "underline" or "ibeam"
 cursor_shape = ibeam
 
-# $BROWSER is used by default
-#browser = chromium
-
-# word characters used for word selection
-# (default if unset: all graphic non-punctuation/space characters)
-#word_chars = -A-Za-z0-9,./?%&#:_=+@~
-
 [colors]
-# foreground = #95969A
-# foreground = #d0d0d0
-foreground = #B2A191
-#foreground_bold = #ffffff
-#foreground_dim = #888888
 background = #000
-# background = #171717
-#background = #151515
-# cursor = #BD84B5
-#cursor = #d0d0d0
+# background = #151515
 cursor = #C7A551
 
-# if unset, will reverse foreground and background
-#highlight = #121212
-
 # colors from color0 to color254 can be set
-color0 =   #202020
-color8 =   #404040
-color1 =   #BF3F34
-color9 =   #FF6C5F
-color2 =   #707D22
-color10 =  #B8CA4B
-color3 =   #BF7A29
-color11 =  #C7A551
-color4 =   #627A92
-color12 =  #95B9DE
-color5 =   #75507B
-color13 =  #AD7FA8
-color6 =   #757978
-color14 =  #9FA590
-color7 =   #B2A191
-color15 =  #E8D0C3 
+#background = #1D1F21
+foreground = #C5C8C6
+
+color0 = #282A2E
+color8 = #373B41
+color1 = #A54242
+color9 = #CC6666
+color2 = #8C9440
+color10 = #B5BD68
+#color3 = #DE935F
+color3 = #BF7A29
+#color11 = #F0C674
+color11 = #C7A551
+color4 = #5F819D
+color12 = #81A2BE
+color5 = #85678F
+color13 = #B294BB
+color6 = #5E8D87
+color14 = #8ABEB7
+color7 = #707880
+color15 = #C5C8C6
