--- a/.config/termite/config
+++ b/.config/termite/config
@@ -28,43 +28,32 @@ cursor_shape = ibeam
 # emit escape sequences for other keys modified by Control
 #modify_other_keys = false
 
+# Solarized light color scheme
+
 [colors]
+foreground = #657b83
+foreground_bold = #073642
+#foreground_dim = #888888
+background = #fdf6e3
+cursor = #586e75
 
-# special
-foreground      = #cccccc
-foreground_bold = #cccccc
-cursor          = #cccccc
-background      = #333333
+# if unset, will reverse foreground and background
+#highlight = #839496
 
-# black
-color0  = #666666
-color8  = #999999
-
-# red
-color1  = #cc6699
-color9  = #ff99cc
-
-# green
-color2  = #99cc66
-color10 = #ccff99
-
-# yellow
-color3  = #cc9966
-color11 = #ffcc99
-
-# blue
-color4  = #6699cc
-color12 = #99ccff
-
-# magenta
-color5  = #9966cc
-color13 = #cc99ff
-
-# cyan
-color6  = #66cc99
-color14 = #99ffcc
-
-# white
-color7  = #cccccc
-color15 = #ffffff
-
+# colors from color0 to color254 can be set
+color0 = #073642
+color1 = #dc322f
+color2 = #859900
+color3 = #b58900
+color4 = #268bd2
+color5 = #d33682
+color6 = #2aa198
+color7 = #eee8d5
+color8 = #002b36
+color9 = #cb4b16
+color10 = #586e75
+color11 = #657b83
+color12 = #839496
+color13 = #6c71c4
+color14 = #93a1a1
+color15 = #fdf6e3
