--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,7 +35,7 @@ set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
-set -g status-interval 2
+set -g status-interval 30
 
 # messaging
 set -g message-fg black
@@ -93,7 +93,7 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M '
 set -g status-right-length 50
 set -g status-left-length 20
 
