--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,8 @@
 [commit]
 	gpgsign = true
 [alias]
-	# Most of these basically yanked straight outta https://hackernoon.com/lesser-known-git-commands-151a1918a60#.47hyswh0f
+	# These yanked straight outta https://hackernoon.com/lesser-known-git-commands-151a1918a60#.47hyswh0f
 	please = push --force-with-lease
 	shorty = status --short --branch
+[fetch]
+	prune = true
