--- a/etc/X11/xorg.conf.d/00-keyboard.conf
+++ b/etc/X11/xorg.conf.d/00-keyboard.conf
@@ -3,6 +3,19 @@
 Section "InputClass"
         Identifier "system-keyboard"
         MatchIsKeyboard "on"
-        Option "XkbLayout" "dvorak"
-        Option "XkbOptions" "compose:ralt,ctrl:nocaps"
+	MatchProduct "AT Translated Set 2 keyboard"
+        Option "XkbLayout" "us"
+        Option "XkbModel" "pc105"
+        Option "XkbVariant" "dvorak"
+        Option "XkbOptions" "ctrl:nocaps,compose:ralt"
+EndSection
+
+Section "InputClass"
+	Identifier "ErgoDox"
+	MatchIsKeyboard "on"
+	MatchProduct "ErgoDox EZ ErgoDox EZ"
+	Option "XkbLayout" "us"
+	Option "XkbModel" "pc105"
+	Option "XkbVariant" "qwerty"
+	Option "XkbOptions" "compose:ralt"
 EndSection
