Had to patch up my configs this morning

--- a/etc/X11/xorg.conf.d/00-keyboard.conf
+++ b/etc/X11/xorg.conf.d/00-keyboard.conf
@@ -5,7 +5,6 @@ Section "InputClass"
         MatchIsKeyboard "on"
 	MatchProduct "AT Translated Set 2 keyboard"
         Option "XkbLayout" "us"
-        Option "XkbModel" "pc105"
         Option "XkbVariant" "dvorak"
         Option "XkbOptions" "ctrl:nocaps,compose:ralt"
 EndSection
@@ -15,7 +14,6 @@ Section "InputClass"
 	MatchIsKeyboard "on"
 	MatchProduct "ErgoDox EZ ErgoDox EZ"
 	Option "XkbLayout" "us"
-	Option "XkbModel" "pc105"
-	Option "XkbVariant" "qwerty"
+	Option "XkbVariant" ","
 	Option "XkbOptions" "compose:ralt"
 EndSection
