--- a/etc/X11/xorg.conf.d/00-keyboard.conf
+++ b/etc/X11/xorg.conf.d/00-keyboard.conf
@@ -3,17 +3,6 @@
 Section "InputClass"
         Identifier "system-keyboard"
         MatchIsKeyboard "on"
-	MatchProduct "AT Translated Set 2 keyboard"
-        Option "XkbLayout" "us"
-        Option "XkbVariant" "dvorak"
-        Option "XkbOptions" "ctrl:nocaps,compose:ralt"
-EndSection
-
-Section "InputClass"
-	Identifier "ErgoDox"
-	MatchIsKeyboard "on"
-	MatchProduct "ErgoDox EZ ErgoDox EZ"
-	Option "XkbLayout" "us"
-	Option "XkbVariant" ","
-	Option "XkbOptions" "compose:ralt"
+        Option "XkbLayout" "dvorak"
+        Option "XkbOptions" "compose:ralt,caps:backspace"
 EndSection
