This was needed to work with the new Spectre

--- a/etc/X11/xorg.conf.d/30-touchpad.conf
+++ b/etc/X11/xorg.conf.d/30-touchpad.conf
@@ -1,7 +1,7 @@
-Section "InputDevice"
+Section "InputClass"
 	Identifier "Touchpad"
-	MatchIsTouchpad "on"
 	Driver "libinput"
+	MatchIsTouchpad "on"
 	Option "Tapping" "on"
 	Option "NaturalScrolling" "true"
 EndSection
