--- a/.config/termite/config
+++ b/.config/termite/config
@@ -9,7 +9,7 @@ allow_bold = false
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = CamingoCode 11
+font = Iosevka Term 12
 scrollback_lines = 1000
 search_wrap = true
 #icon_name = terminal
@@ -17,7 +17,7 @@ search_wrap = true
 
 # 0.0: opaque, 1.0: transparent
 transparency = 0.0
-pseudo_transparency = true
+pseudo_transparency = false
 
 # "system", "on" or "off"
 cursor_blink = on
@@ -26,26 +26,69 @@ cursor_blink = on
 cursor_shape = ibeam
 
 [colors]
-# Seoul256
-#background = #3a3a3a
-background = #1a1a1a
-foreground = #d0d0d0
-color0 = #4e4e4e
-color1 = #d68787
-color2 = #5f865f
-color3 = #d8af5f
-color4 = #85add4
-color5 = #d7afaf
-color6 = #87afaf
-color7 = #d0d0d0
-color8 = #626262
-color9 = #d75f87
-color10 = #87af87
-color11 = #ffd787
-color12 = #add4fb
-color13 = #ffafaf
-color14 = #87d7d7
-color15 = #e4e4e4
-cursor = #d0d0d0
-#cursorColor2 = #3a3a3a
-colorBD = #e4e4e4
+# hard contrast
+background = #1d2021
+#background = #282828
+# soft contrast:
+#background = #32302f
+foreground = #ebdbb2
+foreground_bold = #ebdbb2
+
+# dark0 + gray
+color0 = #282828
+color8 = #928374
+
+# neutral_red + bright_red
+color1 = #cc241d
+color9 = #fb4934
+
+# neutral_green + bright_green
+color2 = #98971a
+color10 = #b8bb26
+
+# neutral_yellow + bright_yellow
+color3 = #d79921
+color11 = #fabd2f
+
+# neutral_blue + bright_blue
+color4 = #458588
+color12 = #83a598
+
+# neutral_purple + bright_purple
+color5 = #b16286
+color13 = #d3869b
+
+# neutral_aqua + faded_aqua
+color6 = #689d6a
+color14 = #8ec07c
+
+# light4 + light1
+color7 = #a89984
+color15 = #ebdbb2
+
+#[colors]
+## Seoul256
+##background = #3a3a3a
+#background = #1a1a1a
+#foreground = #d0d0d0
+#color0 = #4e4e4e
+#color1 = #d68787
+#color2 = #5f865f
+#color3 = #d8af5f
+#color4 = #85add4
+#color5 = #d7afaf
+#color6 = #87afaf
+#color7 = #d0d0d0
+#color8 = #626262
+#color9 = #d75f87
+#color10 = #87af87
+#color11 = #ffd787
+#color12 = #add4fb
+#color13 = #ffafaf
+#color14 = #87d7d7
+#color15 = #e4e4e4
+#cursor = #d0d0d0
+##cursorColor2 = #3a3a3a
+#colorBD = #e4e4e4
+
+# vim: ft=dosini cms=#%s
