--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,9 +1,9 @@
 [Settings]
-gtk-theme-name=Paper
-gtk-icon-theme-name=Super-Flat-Remix
-gtk-font-name=Noto Sans 11
-gtk-cursor-theme-name=Adwaita
-gtk-cursor-theme-size=0
+gtk-theme-name=Adapta
+gtk-icon-theme-name=Paper
+gtk-font-name=Noto Sans UI 11
+gtk-cursor-theme-name=DMZ96
+gtk-cursor-theme-size=16
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
@@ -12,4 +12,4 @@ gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
+gtk-xft-hintstyle=hintmedium
