--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,18 +3,31 @@ set-window-option -g utf8 on
 
 set -g default-terminal "screen-256color"
 
-set-option -g default-shell /bin/bash
-
 setw -g aggressive-resize on
 
 set-option -g base-index 1
 setw -g pane-base-index 1
+
+set -sg escape-time 0
 
 # explicitly disable mouse control
 setw -g mode-mouse off
 set -g mouse-select-pane off
 set -g mouse-resize-pane off
 set -g mouse-select-window off
+
+# unfuck my clipboard, courtesy of
+# https://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # rest of file from
 # http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
