--- a/.tmux.conf
+++ b/.tmux.conf
@@ -133,3 +133,17 @@ set -g message-bg colour166
 
 # }
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
+set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @nord_tmux_no_patched_font "1"
