--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 	name = Josh Klar
 	signingkey = j@iv597.com
 [commit]
-	gpgsign = true
+	gpgsign = false
 [alias]
 	# These yanked straight outta https://hackernoon.com/lesser-known-git-commands-151a1918a60#.47hyswh0f
 	please = push --force-with-lease
