Support my Keebio Iris keyboard being firmware-level dvorak

--- a/etc/X11/xorg.conf.d/00-keyboard.conf
+++ b/etc/X11/xorg.conf.d/00-keyboard.conf
@@ -6,3 +6,11 @@ Section "InputClass"
         Option "XkbLayout" "dvorak"
         Option "XkbOptions" "compose:ralt,caps:backspace"
 EndSection
+
+Section "InputClass"
+        Identifier "Iris"
+	    MatchUSBID "ceeb:1256"
+	    Option "XkbLayout" "us"
+	    Option "XkbModel" "pc105"
+	    Option "XkbOptions" "compose:ralt"
+EndSection
