--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -58,6 +58,46 @@ tray-padding = 2
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+[bar/gravity]
+;monitor = ${env:MONITOR:HDMI-1}
+width = 100%
+height = 32
+;offset-x = 1%
+;offset-y = 1%
+radius = 0.0
+fixed-center = false
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 3
+line-color = #f00
+
+border-size = 0
+border-color = #00000000
+
+padding-left = 0
+padding-right = 2
+
+module-margin-left = 1
+module-margin-right = 2
+
+font-0 = sans:pixelsize=10;1
+font-1 = Noto Sans UI:fontformat=truetype:size=11:antialias=false;0
+font-2 = Noto Sans UI:pixelsize=10;1
+
+modules-left = ewmh
+modules-center = xwindow
+modules-right = pulseaudio date powermenu
+
+tray-position = right
+tray-padding = 2
+;tray-transparent = true
+;tray-background = #0063ff
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
 [module/ewmh]
 type = internal/xworkspaces
 label-active = " %name%"
