--- a/.gitconfig
+++ b/.gitconfig
@@ -17,3 +17,10 @@
 	prune = true
 [rerere]
 	enabled = 1
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+[push]
+	default = current
