--- a/etc/X11/xorg.conf.d/00-keyboard.conf
+++ b/etc/X11/xorg.conf.d/00-keyboard.conf
@@ -14,3 +14,11 @@ Section "InputClass"
 	    Option "XkbModel" "pc105"
 	    Option "XkbOptions" "compose:ralt"
 EndSection
+
+Section "InputClass"
+        Identifier "Levinson"
+	    MatchUSBID "ceeb:1146"
+	    Option "XkbLayout" "us"
+	    Option "XkbModel" "pc105"
+	    Option "XkbOptions" "compose:ralt"
+EndSection
