--- a/.config/termite/config
+++ b/.config/termite/config
@@ -30,29 +30,53 @@ cursor_shape = ibeam
 # License:    MIT
 
 [colors]
-foreground = #D8DEE9
-background = rgba(29, 32, 33, 0.9)
-#background = rgba(46, 52, 64, 0.9)
-#2E3440
-foreground_bold = #D8DEE9
-cursor = #D8DEE9
-cursor_foreground = #2E3440
-highlight = #4C566A
+# Base16 Atelier Savanna
+# Author: Bram de Haan (http://atelierbramdehaan.nl)
 
-color0  = #3B4252
-color1  = #BF616A
-color2  = #A3BE8C
-color3  = #EBCB8B
-color4  = #81A1C1
-color5  = #B48EAD
-color6  = #88C0D0
-color7  = #E5E9F0
-color8  = #4C566A
-color9  = #BF616A
-color10 = #A3BE8C
-color11 = #EBCB8B
-color12 = #81A1C1
-color13 = #B48EAD
-color14 = #8FBCBB
-color15 = #ECEFF4
+foreground          = #87928a
+foreground_bold     = #dfe7e2
+cursor              = #dfe7e2
+cursor_foreground   = #171c19
+background          = rgba(23, 28, 25, 0.7)
+
+# 16 color space
+
+# Black, Gray, Silver, White
+color0  = #171c19
+color8  = #5f6d64
+color7  = #87928a
+color15 = #ecf4ee
+
+# Red
+color1  = #b16139
+color9  = #b16139
+
+# Green
+color2  = #489963
+color10 = #489963
+
+# Yellow
+color3  = #a07e3b
+color11 = #a07e3b
+
+# Blue
+color4  = #478c90
+color12 = #478c90
+
+# Purple
+color5  = #55859b
+color13 = #55859b
+
+# Teal
+color6  = #1c9aa0
+color14 = #1c9aa0
+
+# Extra colors
+color16 = #9f713c
+color17 = #867469
+color18 = #232a25
+color19 = #526057
+color20 = #78877d
+color21 = #dfe7e2
+
 # vim: ft=dosini cms=#%s
