--- a/.config/termite/config
+++ b/.config/termite/config
@@ -9,7 +9,7 @@ allow_bold = false
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Iosevka Term 11
+font = Lekton 12
 scrollback_lines = 1000
 search_wrap = true
 #icon_name = terminal
