Update AUR wrapper to aurman, try and fail to hack in FSD Emoji font like kitty was able to use

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -37,15 +37,6 @@ fc-match -s monospace
 		</edit>
 	</match>
 
-	<match target="pattern">
-		<test name="prgname">
-			<string>termite</string>
-		</test>
-		<edit name="family" mode="prepend_first">
-			<string>Noto Emoji</string>
-		</edit>
-	</match>
-
 	<match>
 		<!-- If the requested font is serif -->
 		<test qual="any" name="family">
@@ -66,9 +57,9 @@ fc-match -s monospace
 		<test qual="any" name="family">
 			<string>sans-serif</string>
 		</test>
-		<!-- Make Noto Sans the first result -->
+		<!-- Make Open Sans the first result -->
 		<edit name="family" mode="prepend_first">
-			<string>Noto Sans</string>
+			<string>Open Sans</string>
 		</edit>
 		<!-- Followed by Noto Emoji Color -->
 		<edit name="family" mode="prepend_first">
@@ -82,7 +73,11 @@ fc-match -s monospace
 			<string>monospace</string>
 		</test>
 		<edit name="family" mode="prepend_first">
-			<string>CamingoCode</string>
+			<string>Lekton</string>
+		</edit>
+		<!-- Followed by FSD Emoji -->
+		<edit name="family" mode="prepend_first">
+			<string>FSD Emoji</string>
 		</edit>
 		<!-- Followed by Noto Emoji Color -->
 		<edit name="family" mode="prepend_first">
