--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -2,3 +2,5 @@ no-grab
 enable-ssh-support
 default-cache-ttl 34560000
 max-cache-ttl 34560000
+allow-loopback-pinentry
+pinentry-program /usr/bin/pinentry-tty
