Various changes from laptop

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -37,6 +37,18 @@ fc-match -s monospace
 		</edit>
 	</match>
 
+	<match target="pattern">
+		<test name="prgname">
+			<string>termite</string>
+		</test>
+		<edit name="family" mode="prepend_first">
+			<string>FSD Emoji</string>
+		</edit>
+		<edit name="autohint" mode="assign">
+			<bool>false</bool>
+		</edit>
+	</match>
+
 	<match>
 		<!-- If the requested font is serif -->
 		<test qual="any" name="family">
@@ -74,10 +86,6 @@ fc-match -s monospace
 		</test>
 		<edit name="family" mode="prepend_first">
 			<string>Lekton</string>
-		</edit>
-		<!-- Followed by FSD Emoji -->
-		<edit name="family" mode="prepend_first">
-			<string>FSD Emoji</string>
 		</edit>
 		<!-- Followed by Noto Emoji Color -->
 		<edit name="family" mode="prepend_first">
