--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,19 +18,31 @@ set $term termite
 # Your preferred application launcher
 set $menu rofi -modi combi -show combi -combi-modi drun,run -font "Noto Sans 11" -bw 0 -separator-style solid
 
+gaps outer 5
+gaps inner 5
+
 ### Output configuration
 output * bg /home/j/.wallpaper fill
-output eDP-1 scale 1.75
+output eDP-1 scale 1.35 position 0,0
+output DP-2 position 1920,0
 
 ### Input configuration
 input 1:1:AT_Translated_Set_2_keyboard xkb_layout dvorak
+input 1:1:AT_Translated_Set_2_keyboard xkb_options caps:backspace
 
-input 0:0:Atmel_maXTouch_Touchpad accel_profile adaptive
-input 0:0:Atmel_maXTouch_Touchpad dwt on
-input 0:0:Atmel_maXTouch_Touchpad middle_emulation enabled
-input 0:0:Atmel_maXTouch_Touchpad natural_scroll enabled
-input 0:0:Atmel_maXTouch_Touchpad tap enabled
-input 0:0:Atmel_maXTouch_Touchpad tap_button_map lrm
+input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad accel_profile adaptive
+input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad dwt on
+input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad middle_emulation enabled
+input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad natural_scroll enabled
+input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad tap enabled
+input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad tap_button_map lrm
+
+input 1133:16641:Logitech_Rechargeable_Touchpad_T650 accel_profile adaptive
+input 1133:16641:Logitech_Rechargeable_Touchpad_T650 dwt on
+input 1133:16641:Logitech_Rechargeable_Touchpad_T650 middle_emulation enabled
+input 1133:16641:Logitech_Rechargeable_Touchpad_T650 natural_scroll enabled
+input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap enabled
+input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap_button_map lrm
 
 ### Key bindings
 #
@@ -39,8 +51,10 @@ input 0:0:Atmel_maXTouch_Touchpad tap_button_map lrm
     # start a terminal
     bindsym $mod+Return exec $term
 
+	bindsym $mod+home exec sway_lock.sh
+
     # kill focused window
-    bindsym $mod+Shift+q kill
+    bindsym $mod+end kill
 
     # start your launcher
     bindsym $mod+Space exec $menu
@@ -106,6 +120,9 @@ input 0:0:Atmel_maXTouch_Touchpad tap_button_map lrm
     bindsym $mod+Shift+8 move container to workspace 8
     bindsym $mod+Shift+9 move container to workspace 9
     bindsym $mod+Shift+0 move container to workspace 10
+
+	bindsym $mod+Control+left move workspace to output left
+	bindsym $mod+Control+right move workspace to output right
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
 #
