--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -59,7 +59,7 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 [bar/gravity]
-monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:HDMI-A-0}
 width = 100%
 height = 32
 ;offset-x = 1%
