--- a/.config/termite/config
+++ b/.config/termite/config
@@ -9,8 +9,8 @@ allow_bold = false
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = monospace 12
-scrollback_lines = 1000
+font = IBM Plex Mono 11
+scrollback_lines = 10000
 search_wrap = true
 #icon_name = terminal
 #geometry = 640x480
