--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -85,7 +85,7 @@ fc-match -s monospace
 			<string>monospace</string>
 		</test>
 		<edit name="family" mode="prepend_first">
-			<string>IBM Plex Mono</string>
+			<string>PragmataPro</string>
 		</edit>
 		<!-- Followed by Noto Emoji Color -->
 		<edit name="family" mode="prepend_first">
