--- a/.config/termite/config
+++ b/.config/termite/config
@@ -12,8 +12,6 @@ clickable_url = true
 font = PragmataPro 12
 scrollback_lines = 10000
 search_wrap = true
-#icon_name = terminal
-#geometry = 640x480
 
 # "system", "on" or "off"
 cursor_blink = on
@@ -22,61 +20,48 @@ cursor_blink = on
 cursor_shape = ibeam
 
 [colors]
-# Copyright (c) 2016-present Arctic Ice Studio <development@arcticicestudio.com>
-# Copyright (c) 2016-present Sven Greb <code@svengreb.de>
+# gruvbox, from https://github.com/morhetz/gruvbox-contrib/blob/master/termite/gruvbox-dark
 
-# Project:    Nord Termite
-# Repository: https://github.com/arcticicestudio/nord-termite
-# License:    MIT
+# hard contrast: background = #1d2021
+ background = rgba(29, 32, 33, 0.9)
+# default: background = #282828
+# background = rgba(40, 40, 40, 0.9)
+# soft contrast: background = #32302f
+# background = rgba(50, 48, 47, 0.9)
 
-[colors]
-# Base16 Atelier Savanna
-# Author: Bram de Haan (http://atelierbramdehaan.nl)
+foreground = #ebdbb2
+foreground_bold = #ebdbb2
 
-foreground          = #87928a
-foreground_bold     = #dfe7e2
-cursor              = #dfe7e2
-cursor_foreground   = #171c19
-background          = rgba(23, 28, 25, 0.9)
+# dark0 + gray
+color0 = #282828
+color8 = #928374
 
-# 16 color space
+# neutral_red + bright_red
+color1 = #cc241d
+color9 = #fb4934
 
-# Black, Gray, Silver, White
-color0  = #171c19
-color8  = #5f6d64
-color7  = #87928a
-color15 = #ecf4ee
+# neutral_green + bright_green
+color2 = #98971a
+color10 = #b8bb26
 
-# Red
-color1  = #b16139
-color9  = #b16139
+# neutral_yellow + bright_yellow
+color3 = #d79921
+color11 = #fabd2f
 
-# Green
-color2  = #489963
-color10 = #489963
+# neutral_blue + bright_blue
+color4 = #458588
+color12 = #83a598
 
-# Yellow
-color3  = #a07e3b
-color11 = #a07e3b
+# neutral_purple + bright_purple
+color5 = #b16286
+color13 = #d3869b
 
-# Blue
-color4  = #478c90
-color12 = #478c90
+# neutral_aqua + faded_aqua
+color6 = #689d6a
+color14 = #8ec07c
 
-# Purple
-color5  = #55859b
-color13 = #55859b
-
-# Teal
-color6  = #1c9aa0
-color14 = #1c9aa0
-
-# Extra colors
-color16 = #9f713c
-color17 = #867469
-color18 = #232a25
-color19 = #526057
-color20 = #78877d
-color21 = #dfe7e2
+# light4 + light1
+color7 = #a89984
+color15 = #ebdbb2
 
 # vim: ft=dosini cms=#%s
