--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,7 +8,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term termite
+set $term kitty
 # Your preferred application launcher
 set $menu rofi_launcher.sh
 
