--- a/.config/sway/config
+++ b/.config/sway/config
@@ -14,19 +14,19 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term termite
+set $term alacritty
 # Your preferred application launcher
 set $menu rofi -modi combi -show combi -combi-modi drun,run -font "Noto Sans 11" -bw 0 -separator-style solid
 
-gaps outer 5
-gaps inner 5
+gaps outer 8
+gaps inner 8
 
 ### Output configuration
 output * bg /home/j/.wallpaper fill
 
 # Laptop
-output eDP-1 scale 1.25 position 0,0
-output DP-2 position 1920,0
+output eDP-1 scale 1.25 position 1180,1440
+output DP-2 position 0,0
 
 # Desktop
 output HDMI-A-1 position 293,0
@@ -204,6 +204,19 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 include /etc/sway/config.d/*
+
+include ~/src/base16-sway/themes/base16-black-metal.config
+# Basic color configuration using the Base16 variables for windows and borders.
+# KLARDOTSH: modified heavily to handle base16-black-metal's weirdness
+# Property Name         Border  BG      Text    Indicator Child Border
+#client.focused          $base05 $base0D $base00 $base0D $base0D
+#client.focused_inactive $base01 $base01 $base05 $base03 $base01
+client.focused          $base01 $base00 $base05 $base01 $base01
+client.focused_inactive $base01 $base00 $base0F $base01 $base01
+client.unfocused        $base01 $base00 $base0F $base01 $base01
+client.urgent           $base0A $base0A $base00 $base0A $base0A
+client.placeholder      $base00 $base00 $base05 $base00 $base00
+client.background       $base07
 
 exec systemctl --user start waybar
 exec systemctl --user start mako
