--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -39,6 +39,15 @@ fc-match -s monospace
 
 	<match target="pattern">
 		<test name="prgname">
+			<string>iridium</string>
+		</test>
+		<edit name="family" mode="prepend_first">
+			<string>Noto Color Emoji</string>
+		</edit>
+	</match>
+
+	<match target="pattern">
+		<test name="prgname">
 			<string>termite</string>
 		</test>
 		<edit name="family" mode="prepend_first">
