--- a/.config/sway/config
+++ b/.config/sway/config
@@ -212,14 +212,16 @@ include ~/src/base16-sway/themes/base16-black-metal.config
 # Basic color configuration using the Base16 variables for windows and borders.
 # KLARDOTSH: modified heavily to handle base16-black-metal's weirdness
 # Property Name         Border  BG      Text    Indicator Child Border
-#client.focused          $base05 $base0D $base00 $base0D $base0D
-#client.focused_inactive $base01 $base01 $base05 $base03 $base01
-client.focused          $base01 $base00 $base05 $base01 $base01
-client.focused_inactive $base01 $base00 $base0F $base01 $base01
+client.focused          $base05 $base0D $base00 $base0D $base0D
+client.focused_inactive $base01 $base01 $base05 $base03 $base01
+#client.focused          $base01 $base00 $base05 $base01 $base01
+#client.focused_inactive $base01 $base00 $base0F $base01 $base01
 client.unfocused        $base01 $base00 $base0F $base01 $base01
 client.urgent           $base0A $base0A $base00 $base0A $base0A
 client.placeholder      $base00 $base00 $base05 $base00 $base00
 client.background       $base07
+
+for_window [title="^.*"] border pixel 1
 
 exec systemctl --user start waybar
 exec systemctl --user start mako
