The great migration to Void Linux (for giggles)
I've re-imaged my laptop (formerly `spoonman`, now `rain`) from Arch
Linux, my trusted distro of somewhere around a decade in varying
capacities, to Void Linux (with musl instead of glibc). It's very much a
buggy work in progress, but as far as today's progress goes:

- Various ZSH config updates to support branching paths (so they'll
still, theoretically, run correctly on Arch systems, while now
supporting Void functionality, too)

- Trivial font change in Alacritty to something Void actually has a
package for (I'm lazy)

- TONS of initscript fuckery - Void uses `runit`, which _can_ emulate a
lot of the "service-oriented" workflows I had going with systemd's
user-mode, but there's a mountain of shell scripts to write to get it
there. As of now, `waybar` and `mako`'s automations have been ported,
and an additional one for `swaybg` has been added (for whatever reason,
`swaybg` works great, but `output * bg....` in `.config/sway/config`
doesn't do anything on this particular setup - I'm stuck with the gray
screen forever, which is ugly

- A `.desktop` file for Void's `firefox-wayland` bin (which comes as a
separate bin in the `firefox` package, unlike Arch's bin which seems to
auto-detect Wayland correctly in the main bin)

- README update, though it should probably just be rewritten at some
point this summer

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -223,5 +223,4 @@ client.background       $base07
 
 for_window [title="^.*"] border pixel 1
 
-exec systemctl --user start waybar
-exec systemctl --user start mako
+exec sway_services.sh
