--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -86,7 +86,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: PragmataPro
+    family: Iosevka Term
 
     # The `style` can be specified to pick a specific face.
     style: Regular
