--- a/.config/mako/config
+++ b/.config/mako/config
@@ -3,6 +3,26 @@ markup=1
 max-visible=5
 default-timeout=7000
 output=eDP-1
-background-color=#171c19e8
+# background-color=#171c19e8
 padding=10
 ignore-timeout=1
+
+# https://github.com/Eluminae/base16-mako/blob/master/colors/base16-black-metal.config
+## Base16 Black Metal
+# Author: metalelf0 (https://github.com/metalelf0)
+#
+# You can use these variables anywhere in the mako configuration file.
+
+background-color=#222222
+text-color=#c1c1c1
+border-color=#c1c1c1
+
+[urgency=low]
+background-color=#121212
+text-color=#333333
+border-color=#c1c1c1
+
+[urgency=high]
+background-color=#5f8787
+text-color=#999999
+border-color=#c1c1c1
