--- a/.config/sway/config
+++ b/.config/sway/config
@@ -57,6 +57,8 @@ input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap_button_map lrm
 bindsym XF86AudioRaiseVolume exec ponymix inc 2
 bindsym XF86AudioLowerVolume exec ponymix dec 2
 bindsym XF86AudioMute exec ponymix toggle
+bindsym XF86MonBrightnessUp exec brightnessctl set +10%
+bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
 
 #
 # Basics:
