New touchscreen on the desktop (for Bitwig!), fix sway startup on Arch desktop

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 .config/nvim/.netrwhist
 etc/sv/j/supervise
 .config/sv/**/supervise
+.config/systemd/**/*.wants
+.config/systemd/user/pulseaudio.socket
