--- a/.config/sway/config
+++ b/.config/sway/config
@@ -32,8 +32,8 @@ output eDP-1 scale 1.25 position 0,0
 output DP-2 position 1980,0
 
 # Desktop
-output HDMI-A-1 position 293,0
-output DP-3 position 0,1081
+output HDMI-A-1 position 3441,0 scale 1.5
+output DP-3 position 0,0
 
 ### Input configuration
 input 1:1:AT_Translated_Set_2_keyboard xkb_layout dvorak
@@ -52,6 +52,8 @@ input 1133:16641:Logitech_Rechargeable_Touchpad_T650 middle_emulation enabled
 input 1133:16641:Logitech_Rechargeable_Touchpad_T650 natural_scroll enabled
 input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap enabled
 input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap_button_map lrm
+
+input 1046:49512:TSTP_MTouch map_to_output HDMI-A-1
 
 ### Key bindings
 bindsym XF86AudioRaiseVolume exec ponymix inc 2
