More changes all over the place

--- a/.config/mako/config
+++ b/.config/mako/config
@@ -2,7 +2,7 @@ font=Open Sans 11
 markup=1
 max-visible=5
 default-timeout=7000
-output=eDP-1
+output=DP-2
 # background-color=#171c19e8
 padding=10
 ignore-timeout=1
