--- a/.config/sway/config
+++ b/.config/sway/config
@@ -32,8 +32,9 @@ output eDP-1 scale 1.25 position 0,0
 output DP-2 position 1980,0
 
 # Desktop
-output HDMI-A-1 position 3441,0 scale 1.5
-output DP-3 position 0,0
+output HDMI-A-1 position 5361,0
+output DP-2 position 0,0
+output DP-3 position 3441,0 scale 1.5
 
 ### Input configuration
 input 1:1:AT_Translated_Set_2_keyboard xkb_layout dvorak
@@ -53,7 +54,16 @@ input 1133:16641:Logitech_Rechargeable_Touchpad_T650 natural_scroll enabled
 input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap enabled
 input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap_button_map lrm
 
-input 1046:49512:TSTP_MTouch map_to_output HDMI-A-1
+input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse accel_profile adaptive
+input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse dwt on
+input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse middle_emulation enabled
+input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse natural_scroll enabled
+input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse tap enabled
+input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse tap_button_map lrm
+
+
+# DP-3 is a touchscreen tablety monitor, lock its input
+input 1046:49512:TSTP_MTouch map_to_output DP-3
 
 ### Key bindings
 bindsym XF86AudioRaiseVolume exec ponymix inc 2
