--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Fantome
-gtk-icon-theme-name=Papirus
+gtk-theme-name=Arc-Red-Dark
+gtk-icon-theme-name=Arc
 gtk-font-name=Open Sans 11
 gtk-cursor-theme-size=18
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
@@ -13,4 +13,4 @@ gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=rgb
-gtk-cursor-theme-name=Vanilla-DMZ-AA
+gtk-cursor-theme-name=capitaine-cursors
