Move pulse back to Cadence-friendly dir

--- a/.pulse/daemon.conf
+++ b/.pulse/daemon.conf
@@ -1,5 +1,6 @@
-flat-volumes = no
 default-sample-format = float32le
+default-sample-rate = 96000
 realtime-scheduling = yes
 rlimit-rttime = -1
 exit-idle-time = -1
+flat-volumes = no
