--- a/.config/sway/config
+++ b/.config/sway/config
@@ -46,6 +46,9 @@ output DP-2 position 8560,0
 input 1:1:AT_Translated_Set_2_keyboard xkb_layout dvorak
 input 1:1:AT_Translated_Set_2_keyboard xkb_options caps:backspace
 
+input 1133:45849:Logitech_K810_Keyboard xkb_layout dvorak
+input 1133:45849:Logitech_K810_Keyboard xkb_options caps:backspace
+
 input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad accel_profile adaptive
 input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad dwt on
 input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad middle_emulation enabled
