--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,9 +1,9 @@
 [Settings]
-gtk-theme-name=Arc-Red-Dark
+gtk-theme-name=Nordic
 gtk-icon-theme-name=Arc
-gtk-font-name=Open Sans 11
-gtk-cursor-theme-size=18
-gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-font-name=Open Sans 10
+gtk-cursor-theme-size=0
+gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
 gtk-menu-images=1
