--- a/.config/obs-studio/basic/profiles/Untitled/basic.ini
+++ b/.config/obs-studio/basic/profiles/Untitled/basic.ini
@@ -4,7 +4,7 @@ Name=Untitled
 [Video]
 BaseCX=3440
 BaseCY=1440
-OutputCX=2580
+OutputCX=2560
 OutputCY=1080
 FPSType=0
 FPSCommon=60
@@ -37,9 +37,14 @@ FFAudioTrack=1
 RecFilePath=/data/videos/streams/
 RecFileNameWithoutSpace=true
 RecFormat=flv
+FFAudioMixes=1
+Pre22.1Settings=true
 
 [Hotkeys]
 OBSBasic.StartStreaming={\n    "bindings": [\n        {\n            "alt": true,\n            "control": true,\n            "key": "OBS_KEY_S",\n            "shift": true\n        }\n    ]\n}
 OBSBasic.StopStreaming={\n    "bindings": [\n        {\n            "alt": true,\n            "control": true,\n            "key": "OBS_KEY_S",\n            "shift": true\n        }\n    ]\n}
 OBSBasic.StartRecording={\n    "bindings": [\n        {\n            "alt": true,\n            "control": true,\n            "key": "OBS_KEY_R",\n            "shift": true\n        }\n    ]\n}
 OBSBasic.StopRecording={\n    "bindings": [\n        {\n            "alt": true,\n            "control": true,\n            "key": "OBS_KEY_R",\n            "shift": true\n        }\n    ]\n}
+
+[Panels]
+CookieId=7FC5535F6B1A9090
