Split system-specific sway configs; colorscheme script

--- a/.config/sway/common.config
+++ b/.config/sway/common.config
@@ -1,7 +1,3 @@
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
 # Read `man 5 sway` for a complete reference.
 
 ### Variables
@@ -16,7 +12,7 @@ set $right l
 # Your preferred terminal emulator
 set $term alacritty
 # Your preferred application launcher
-set $menu rofi -modi combi -show combi -combi-modi drun,run -font "Noto Sans 11" -bw 0 -separator-style solid
+set $menu j4-dmenu-desktop --dmenu="bemenu -i"
 
 gaps outer 8
 gaps inner 8
@@ -26,21 +22,6 @@ seat seat0 hide_cursor 5000
 
 ### Output configuration
 output * bg /home/j/.wallpaper fill
-
-# Laptop
-output eDP-1 scale 1.25 position 0,0
-output DP-2 position 1980,0
-
-# Desktop
-# Dell 34" - 3440x1440
-output DP-1 position 0,0
-# "Orion Communications Co" 12" touchscreen - 1600x1200
-output HDMI-A-1 position 475,1441
-# LG 25" x2 - 2560x1080
-output DP-5 position 3440,0
-output DP-4 position 6000,0
-# Optoma Projector - 1920x1080
-output DP-2 position 8560,0
 
 ### Input configuration
 input 1:1:AT_Translated_Set_2_keyboard xkb_layout dvorak
@@ -70,16 +51,9 @@ input 1133:16641:Logitech_Rechargeable_Touchpad_T650 natural_scroll enabled
 input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap enabled
 input 1133:16641:Logitech_Rechargeable_Touchpad_T650 tap_button_map lrm
 
-input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse accel_profile adaptive
-input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse dwt on
-input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse middle_emulation enabled
-input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse natural_scroll enabled
-input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse tap enabled
-input 9610:8214:HAILUCK_CO.,LTD_Usb_Touch_Mouse tap_button_map lrm
-
-
-# DP-3 is a touchscreen tablety monitor, lock its input
-input 1046:49512:TSTP_MTouch map_to_output DP-3
+# touchscreen tablety monitor, lock its input - this depends on what the output
+# actually is, and this screen isn't currently plugged in to anything
+# input 1046:49512:TSTP_MTouch map_to_output DP-3
 
 ### Key bindings
 bindsym XF86AudioRaiseVolume exec ponymix inc 2
@@ -251,6 +225,7 @@ client.urgent           $base0A $base0A $base00 $base0A $base0A
 client.placeholder      $base00 $base00 $base05 $base00 $base00
 client.background       $base07
 
+# Eliminate titlebars
 for_window [title="^.*"] border pixel 1
 
 exec sway_services.sh
