--- a/.config/sway/gravity.config
+++ b/.config/sway/gravity.config
@@ -8,5 +8,6 @@ output HDMI-A-1 position 475,1441
 output DP-5 position 3440,0
 output DP-4 position 6000,0
 # Optoma Projector - 1920x1080
-output DP-2 position 8560,0
+output DP-2 disable
+# position 0,2521
 
