--- a/.config/sway/common.config
+++ b/.config/sway/common.config
@@ -216,7 +216,7 @@ include ~/src/base16-sway/themes/base16-black-metal.config
 # Basic color configuration using the Base16 variables for windows and borders.
 # KLARDOTSH: modified heavily to handle base16-black-metal's weirdness
 # Property Name         Border  BG      Text    Indicator Child Border
-client.focused          $base05 $base0D $base00 $base0D $base0D
+client.focused          $base05 $base01 $base05 $base0D $base0D
 client.focused_inactive $base01 $base01 $base05 $base03 $base01
 #client.focused          $base01 $base00 $base05 $base01 $base01
 #client.focused_inactive $base01 $base00 $base0F $base01 $base01
