swaylock-effects provides the blur I used to shell script and does it WAY faster. sweet.

--- a/.config/sway/common.config
+++ b/.config/sway/common.config
@@ -68,7 +68,9 @@ bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
 # start a terminal
 bindsym $mod+Return exec $term
 
-bindsym $mod+home exec sway_lock
+# depends on swaylock-effects{-git}
+# https://github.com/mortie/swaylock-effects
+bindsym $mod+home exec swaylock --screenshots --effect-blur 3x3
 
 # kill focused window
 bindsym $mod+end kill
