--- a/.config/sway/gravity.config
+++ b/.config/sway/gravity.config
@@ -3,7 +3,7 @@ include ~/.config/sway/common.config
 # Dell 34" - 3440x1440
 output DP-1 position 0,0
 # "Orion Communications Co" 12" touchscreen - 1600x1200
-output HDMI-A-1 position 1075,1441 scale 1.25
+output HDMI-A-1 position 1075,1441 scale 1.25 disable
 # LG 25" x2 - 2560x1080
 output DP-5 position 3440,0
 output DP-4 position 6000,0
