desktop changes from weekend

--- a/.config/sway/common.config
+++ b/.config/sway/common.config
@@ -12,7 +12,8 @@ set $right l
 # Your preferred terminal emulator
 set $term alacritty
 # Your preferred application launcher
-set $menu j4-dmenu-desktop --dmenu="bemenu -i"
+set $menu rofi -modi combi -show combi -combi-modi drun,run -font "Noto Sans 11" -bw 0 -separator-style solid
+# j4-dmenu-desktop --dmenu="bemenu -i"
 
 gaps outer 8
 gaps inner 8
