--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Nordic
+gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=Arc
 gtk-font-name=Open Sans 10
 gtk-cursor-theme-size=0
