Other laptop changes?

--- a/.config/sway/spoonman.config
+++ b/.config/sway/spoonman.config
@@ -5,3 +5,6 @@ output eDP-1 scale 1.25 position 0,0
 # Catch-all for the HDMI port on my Plugable dock
 output DP-2 position 1980,0
 
+set $laptop eDP-1
+bindswitch lid:on output $laptop disable
+bindswitch lid:off output $laptop enable
