Theming and config updates from todayish?

--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -3,10 +3,10 @@ rofi.width:                          50
 rofi.lines:                          15
 rofi.columns:                        1
 rofi.font:                           roboto mono 10
-rofi.color-normal:                   #020C1B, #d1faff, #020C1B, #416a7f, #d1faff
-rofi.color-urgent:                   #020C1B, #d6b48d, #22231D, #d6b48d, #d1faff
-rofi.color-active:                   #020C1B, #4782dd, #020C1B, #4782dd, #020C1B
-rofi.color-window:                   #020C1B, #416a7f, #2d4957
+rofi.color-normal:                   #050A37, #ffe3ed, #050A37, #cb6385, #ffe3ed
+rofi.color-urgent:                   #050A37, #d6b48d, #22231D, #d6b48d, #ffe3ed
+rofi.color-active:                   #050A37, #ff255b, #050A37, #ff255b, #050A37
+rofi.color-window:                   #050A37, #cb6385, #8c445b
 rofi.bw:                             5
 rofi.location:                       0
 rofi.padding:                        5
