--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,14 +4,14 @@
 
 set $mod Mod4
 set $alt Mod1
-set $coloract "#416a7f"
-set $colorin "#2d4957"
+set $coloract "#cb6385"
+set $colorin "#8c445b"
 set $terminal urxvtc
-set_from_resource $color15 i3wm.color15 "#d1faff"
-set_from_resource $split i3wm.color10 "#267094"
-set_from_resource $coloru i3wm.color2 "#25546B"
-set_from_resource $color0 i3wm.color0 "#020C1B"
-set_from_resource $color8 i3wm.color8 "#03204b"
+set_from_resource $color15 i3wm.color15 "#ffe3ed"
+set_from_resource $split i3wm.color10 "#ff164e"
+set_from_resource $coloru i3wm.color2 "#EC1F45"
+set_from_resource $color0 i3wm.color0 "#050A37"
+set_from_resource $color8 i3wm.color8 "#081165"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
