--- a/.config/sway/common.config
+++ b/.config/sway/common.config
@@ -231,4 +231,9 @@ client.background       $base07
 # Eliminate titlebars
 for_window [title="^.*"] border pixel 1
 
+exec_always import-gsettings \
+    gtk-theme:gtk-theme-name \
+    icon-theme:gtk-icon-theme-name \
+    cursor-theme:gtk-cursor-theme-name
+
 exec sway_services.sh
