--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -58,6 +58,18 @@ fc-match -s monospace
 		</edit>
 	</match>
 
+	<match target="pattern">
+		<test name="prgname">
+			<string>alacritty</string>
+		</test>
+		<edit name="family" mode="prepend_first">
+			<string>FSD Emoji</string>
+		</edit>
+		<edit name="autohint" mode="assign">
+			<bool>false</bool>
+		</edit>
+	</match>
+
 	<match>
 		<!-- If the requested font is serif -->
 		<test qual="any" name="family">
@@ -94,7 +106,10 @@ fc-match -s monospace
 			<string>monospace</string>
 		</test>
 		<edit name="family" mode="prepend_first">
-			<string>PragmataPro</string>
+			<string>FSD Emoji</string>
+		</edit>
+		<edit name="family" mode="prepend_first">
+			<string>Iosevka Term</string>
 		</edit>
 		<!-- Followed by Noto Emoji Color -->
 		<edit name="family" mode="prepend_first">
