Track wpgtk themes but NOT their images (avoids LFS/binary requirements)

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ etc/sv/j/supervise
 .config/systemd/user/pulseaudio.socket
 .gnupg/
 .config/sway/config
+.config/wpg/wallpapers
+.config/wpg/samples
