aws-vault + yubikey stuff

--- a/.config/sway/common.config
+++ b/.config/sway/common.config
@@ -31,6 +31,13 @@ input 1:1:AT_Translated_Set_2_keyboard xkb_options caps:backspace
 input 1133:45849:Logitech_K810_Keyboard xkb_layout dvorak
 input 1133:45849:Logitech_K810_Keyboard xkb_options caps:backspace
 
+input 2:7:SynPS/2_Synaptics_TouchPad accel_profile adaptive
+input 2:7:SynPS/2_Synaptics_TouchPad dwt on
+input 2:7:SynPS/2_Synaptics_TouchPad middle_emulation enabled
+input 2:7:SynPS/2_Synaptics_TouchPad natural_scroll enabled
+input 2:7:SynPS/2_Synaptics_TouchPad tap enabled
+input 2:7:SynPS/2_Synaptics_TouchPad tap_button_map lrm
+
 input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad accel_profile adaptive
 input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad dwt on
 input 1739:30383:DELL07E6:00_06CB:76AF_Touchpad middle_emulation enabled
