fix: clean up git status by making .config an opt-in-only directory here

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-.config/gtk-3.0/bookmarks
-.config/gtk-2.0/gtkfilechooser.ini
-.config/nvim/.netrwhist
+.config
 etc/sv/j/supervise
-.config/sv/**/supervise
-.config/systemd/**/*.wants
-.config/systemd/user/pulseaudio.socket
 .gnupg/
-.config/wpg/wallpapers
-.config/wpg/samples
