feat(chroot): migrated to xbps-uunshare instead of flatpak/other hackery to run steam et. al. on musl

--- a/.local/share/applications/discord-chroot.desktop
+++ b/.local/share/applications/discord-chroot.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Discord (Force X11)
-Exec="/home/j/bin/discord"
+Name=Discord (chroot, x11)
+Exec="/home/j/bin/chroot_discord"
 Terminal=false
 Type=Application
 Icon=discord
