chore: more gentoo use flag stuff

--- a/etc/portage/antarctica.make.conf
+++ b/etc/portage/antarctica.make.conf
@@ -26,7 +26,7 @@ PKGDIR="/var/cache/binpkgs"
 # Please keep this setting intact when reporting bugs.
 LC_MESSAGES=C
 
-USE="-systemd -networkmanager -consolekit dbus elogind alsa jack X wayland d3d9 lm-sensors vulkan ffmpeg python unicode evdev libinput policykit zsh-completion pulseaudio gles opengl kms libsamplerate ao realtime libressl threads opus theora vorbis logrotate truetype vdpau vaapi"
+USE="-systemd -networkmanager -consolekit dbus elogind alsa jack X wayland d3d9 lm-sensors vulkan ffmpeg python unicode evdev libinput policykit zsh-completion pulseaudio gles opengl kms libsamplerate ao realtime libressl threads opus theora vorbis logrotate truetype vdpau vaapi pcsc-lite"
 CURL_SSL="libressl"
 
 ACCEPT_LICENSE="@BINARY-REDISTRIBUTABLE @FSF-APPROVED-OTHER"
