fix: cpuflags are machine-specific, pt2

--- a/etc/portage/antarctica.make.conf
+++ b/etc/portage/antarctica.make.conf
@@ -10,6 +10,7 @@ FFLAGS="${COMMON_FLAGS}"
 LDFLAGS="-Wl,-O2 -Wl,--as-needed"
 
 VIDEO_CARDS="amdgpu radeonsi radeon"
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt sha sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3"
 
 MAKEOPTS="-j18"
 PORTAGE_NICENESS="19"
